force-app/main/default/objects/DocGen_Font__c/DocGen_Font__c.object-meta.xml
<CustomObject>
    <description>Custom fonts uploaded by admins for PDF document generation. Each record maps a font family + weight/style to an uploaded font file (TTF/WOFF) stored as a ContentVersion.</description>
    <label>DocGen Font</label>
    <nameField>
        <displayFormat>FNT-{0000}</displayFormat>
        <label>Font Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGen Fonts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>