force-app/main/default/objects/DocGen_Font__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>The ContentVersion ID of the uploaded font file (TTF or WOFF). Used to load the font binary at PDF generation time.</description>
    <label>Content Version ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>