force-app/main/default/objects/DocGen_Font__c/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <description>The CSS font-family name. Must match the font name used in your DOCX templates (e.g., "Montserrat", "Open Sans").</description>
    <label>Font Family</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>