force-app/main/default/objects/DocGen_Font__c/fields/Font_Format__c.field-meta.xml
<CustomField>
    <fullName>Font_Format__c</fullName>
    <description>The font file format, used in the @font-face CSS src format() hint.</description>
    <label>Font Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>truetype</fullName>
                <default>true</default>
                <label>TrueType (.ttf)</label>
            </value>
            <value>
                <fullName>woff</fullName>
                <label>WOFF (.woff)</label>
            </value>
            <value>
                <fullName>woff2</fullName>
                <label>WOFF2 (.woff2)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>