force-app/main/default/objects/DocGen_Font__c/fields/Font_Style__c.field-meta.xml
<CustomField>
    <fullName>Font_Style__c</fullName>
    <description>CSS font-style value: normal or italic.</description>
    <label>Font Style</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>italic</fullName>
                <label>Italic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>