force-app/main/default/objects/DocGen_Font__c/fields/Font_Weight__c.field-meta.xml
<CustomField>
    <fullName>Font_Weight__c</fullName>
    <description>CSS font-weight value: normal (400) or bold (700).</description>
    <label>Font Weight</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>bold</fullName>
                <label>Bold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>